# mocha

./: CLAUDE.md  README.md  mise.toml  mocha  prd.json  progress.txt  ralph-wiggum.sh
.github/workflows/: build-macos.yml  build-windows.yml  release.yml
scripts/: set-version.js
spec/: README.md  design-system.md  implementation-overview.md  log-parser.md  tauri-commands.md  testing.md  ui-components.md  webui-bindings.md
src/: Makefile  main.c
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  main-lit.ts  main-minimal.ts  main.tsx  parser.ts  store.ts  test-render.ts  toastStore.ts  types.ts
ui/src/components/: DropZone.tsx  LogLine.tsx  LogViewer.tsx  LogViewerLit.ts  LogViewerLitWrapper.tsx  LogbookView.tsx  PatternManager.tsx  Sidebar.tsx  StoryPane.tsx  Toast.tsx  Toolbar.tsx  Tooltip.tsx  index.ts
ui/src/utils/: jsonParser.ts
